fix unnecessary horizontal scrolling

--- a/src/App.css
+++ b/src/App.css
@@ -263,7 +263,7 @@ svg {
   }
 
   .results {
-    width: 100%;
+    width: 70%;
   }
 
 
